# tx-sitter-monolith

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  compose.yml  config.toml  generate_api_client.sh  manual_test.nu  manual_test_gas_prices.nu  manual_test_kms.nu  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build-image-and-publish.yml  relyance-sci.yml  tests.yml  update-deployment.yml
client-template/: Cargo.mustache  README.mustache
client-template/reqwest/: configuration.mustache
crates/base-api-types/: Cargo.toml
crates/base-api-types/src/: address.rs  decimal_u256.rs  h256.rs  hex_bytes.rs  hex_u256.rs  lib.rs
crates/fake-rpc/: Cargo.toml
crates/fake-rpc/src/: lib.rs  main.rs
crates/postgres-docker-utils/: Cargo.toml
crates/postgres-docker-utils/src/: lib.rs
crates/tx-sitter-client/: Cargo.toml  README.md
crates/tx-sitter-client/.openapi-generator/: FILES
crates/tx-sitter-client/docs/: AdminV1Api.md  CreateApiKeyResponse.md  CreateNetworkRequest.md  CreateRelayerRequest.md  CreateRelayerResponse.md  GetTxResponse.md  JsonRpcVersion.md  NetworkInfo.md  NetworkResponse.md  NewNetworkInfo.md  RelayerGasPriceLimit.md  RelayerGasPriceLimitResponse.md  RelayerInfo.md  RelayerResponse.md  RelayerUpdate.md  RelayerUpdateRequest.md  RelayerV1Api.md  RpcRequest.md  SendTxRequest.md  SendTxResponse.md  ServiceApi.md  TransactionPriority.md  TxStatus.md
crates/tx-sitter-client/src/apis/: admin_v1_api.rs  configuration.rs  mod.rs  relayer_v1_api.rs  service_api.rs
crates/tx-sitter-client/src/models/: create_api_key_response.rs  create_network_request.rs  create_relayer_request.rs  create_relayer_response.rs  get_tx_response.rs  json_rpc_version.rs  mod.rs  network_info.rs  network_response.rs  new_network_info.rs  relayer_gas_price_limit.rs  relayer_gas_price_limit_response.rs  relayer_info.rs  relayer_response.rs  relayer_update.rs  relayer_update_request.rs  rpc_request.rs  send_tx_request.rs  send_tx_response.rs  transaction_priority.rs  tx_status.rs
db/migrations/: 001_init.sql  002_relayers_table_update.sql  003_relayers_tx_limits.sql  004_transactions_binaries.sql  005_network_rpc_contraints.sql  006_blob_gas.sql  007_blob_fee_in_tx_hashes.sql
src/: api_key.rs  app.rs  aws.rs  broadcast_utils.rs  client.rs  config.rs  db.rs  keys.rs  lib.rs  main.rs  new_server.rs  serde_utils.rs  server.rs  service.rs  shutdown.rs  task_backoff.rs  task_runner.rs  tasks.rs  telemetry.rs  tx_4844.rs  types.rs
src/aws/: ethers_signer.rs
src/aws/ethers_signer/: utils.rs
src/broadcast_utils/: gas_estimation.rs
src/broadcast_utils/gas_estimation/: fee_history_ethereum_17977856.json  fee_history_optimism_108598243.json
src/db/: data.rs  wrappers.rs
src/db/wrappers/: address.rs  decimal_u256.rs  h256.rs  hex_bytes.rs  hex_u256.rs
src/keys/: kms_keys.rs  local_keys.rs  new_universal_signer.rs  universal_signer.rs
src/new_server/: security.rs  trace_middleware.rs  types.rs
src/serde_utils/: base64_binary.rs
src/server/: data.rs  description.md  error.rs  middleware.rs  routes.rs  security.rs  trace_layer.rs  trace_middleware.rs
src/server/middleware/: auth_middleware.rs  log_response_middleware.rs
src/server/routes/: network.rs  relayer.rs  transaction.rs
src/tasks/: broadcast.rs  escalate.rs  finalize.rs  handle_reorgs.rs  index.rs  metrics.rs  monitor_funds.rs  prune.rs
src/types/: secret_string.rs  wrappers.rs
src/types/wrappers/: address.rs  decimal_u256.rs  h256.rs  hex_bytes.rs  hex_u256.rs  u256.rs
tests/: create_relayer.rs  disabled_relayer.rs  escalation.rs  reorg.rs  rpc_access.rs  send_many_txs.rs  send_too_many_txs.rs  send_tx.rs  send_tx_with_blob.rs  send_tx_with_same_id.rs  send_when_insufficient_funds.rs
tests/common/: anvil_builder.rs  mod.rs  service_builder.rs
