[package]
name = "service"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]

# Internal
postgres-docker-utils = { path = "crates/postgres-docker-utils" }

# Third Party - AWS
aws-config = { version = "0.57.2" }
aws-credential-types = { version = "0.57.2", features = [
    "hardcoded-credentials",
] }
aws-sdk-kms = "0.36.0"
aws-smithy-types = "0.57.2"
aws-types = "0.57.2"

# Third Party - Other
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["headers"] }
chrono = "0.4"
clap = { version = "4.3.0", features = ["env", "derive"] }
config = "0.13.3"
dotenv = "0.15.0"
ethers = { version = "2.0.11" }
ethers-signers = { version = "2.0.11" }
eyre = "0.6.5"
futures = "0.3"
headers = "0.3.9"
hex = "0.4.3"
hex-literal = "0.4.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = "0.14.27"
opentelemetry-otlp = { version = "0.14.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
rand = "0.8.5"
reqwest = { version = "0.11.13", default-features = false, features = [
    "rustls-tls",
] }
serde = "1.0.136"
serde_json = "1.0.91"
sha3 = "0.10.8"
spki = "0.7.2"
sqlx = { version = "0.7.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
tonic = "0.9.0"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2.0"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "std",
    "fmt",
    "json",
    "ansi",
] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
fake-rpc = { path = "crates/fake-rpc" }
indoc = "2.0.3"
test-case = "3.1.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
