[package]
name = "tx-sitter"
version = "0.1.0"
edition = "2021"
default-run = "tx-sitter"
license-file = "LICENSE"

[workspace]
members = ["crates/*"]

[dependencies]
## AWS
aws-config = { version = "1.4.0", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.0", features = [
    "hardcoded-credentials",
] }
aws-sdk-kms = "1.26.0"
aws-smithy-runtime-api = "1.6.0"
aws-smithy-types = "1.1.9"
aws-types = "1.2.1"

# Internal
postgres-docker-utils = { path = "crates/postgres-docker-utils" }

# Company
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries", rev = "e0891328b29d9f85df037633feccca2f74a291a6" }

## External
async-trait = "0.1.74"
base64 = "0.21.5"
bigdecimal = "0.4.2"
chrono = "0.4"
clap = { version = "4.3.0", features = ["env", "derive"] }
config = "0.13.3"
dotenv = "0.15.0"
ethers = { version = "2.0.11", features = ["ws"] }
eyre = "0.6.3"
color-eyre = "0.6.3"
futures = "0.3"
headers = "0.3.9"
hex = "0.4.3"
hex-literal = "0.4.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = "0.14.27"
itertools = "0.12.0"
metrics = "0.22.1"
num-bigint = "0.4.4"
poem = { version = "3", features = ["eyre06"] }
poem-openapi = { version = "5", features = [
    "openapi-explorer",
    "rapidoc",
    "redoc",
    "swagger-ui",
] }
rand = "0.8.5"
reqwest = { version = "0.11.24", default-features = false, features = [
    "rustls-tls",
] }
serde = "1.0.136"
serde_json = "1.0.91"
sha3 = "0.10.8"
spki = "0.7.2"
sqlx = { version = "0.7.2", features = [
    "time",
    "chrono",
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "bigdecimal",
] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "std",
    "fmt",
    "json",
    "ansi",
] }
tracing-error = "0.2.0"
url = "2.4.1"
uuid = { version = "0.8", features = ["v4"] }
version = "3.0.0"
regex = "1.10.4"

[dev-dependencies]
indoc = "2.0.3"
test-case = "3.1.0"

[features]
default = ["default-config"]
default-config = []

[profile.release]
panic = "abort"
